[package]
name = "bloombot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
async-openai = "0.23"
futures = "0.3.30"
log = "0.4.21"
poise = {version = "0.6.1", features = ["cache"]}
pretty_env_logger = "0.5.0"
rand = {version = "0.8.5", features = ["small_rng"]}
serde = { version = "1.0.210", features = ["derive"] }
sqlx = { version = "0.8.1", features = ["postgres", "runtime-tokio", "chrono", "bigdecimal"] }
tokio = { version = "1.37.0", features = ["full"] }
ulid = "1.1.2"
pgvector = { version = "0.4", features = ["sqlx"] }
chrono = { version = "0.4.38", features = ["serde"] }
chrono-humanize = "0.2.3"
dotenvy = "0.15.7"
indexmap = "2.4.0"
csv = "1.3.0"
serde_json = "1.0"
resvg = "0.44.0"
# charts-rs = { version = "0.3.18", features = ["image-encoder"] }
charts-rs = { git = "https://github.com/meditationmind/charts-rs", branch = "y-axis-dynamic-width", features = ["image-encoder"] }

[patch.crates-io]
serenity = { git = "https://github.com/serenity-rs/serenity", branch = "current" }
