[package]
name = "bloombot"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
async-openai = "0.28"
futures = "0.3.30"
log = "0.4.21"
poise = {version = "0.6.1", features = ["cache"]}
tracing = "0.1"
tracing-subscriber = "0.3"
rand = {version = "0.9", features = ["small_rng"]}
serde = { version = "1.0.210", features = ["derive"] }
sqlx = { version = "0.8.1", features = ["postgres", "runtime-tokio", "chrono", "bigdecimal"] }
tokio = { version = "1.37.0", features = ["full"] }
ulid = "1.1.2"
pgvector = { version = "0.4", features = ["sqlx"] }
chrono = { version = "0.4.38", features = ["serde"] }
dotenvy = "0.15.7"
indexmap = "2.4.0"
csv = "1.3.0"
serde_json = "1.0"
resvg = "0.45.0"
charts-rs = { version = "0.3", features = ["image-encoder"] }
# charts-rs = { git = "https://github.com/vicanso/charts-rs", branch = "main", features = ["image-encoder"] }
text_on_image = "0.1.0"
image = "0.24.8"
rusttype = "0.9.3"

[patch.crates-io]
serenity = { git = "https://github.com/serenity-rs/serenity", branch = "current" }
